@@ -10,6 +10,13 @@
 			to make several changes to Segue's database and file-storage structure.
 		 (<i>Adam Franco</i>)
 		
+		<li/> Bug Fix:
+	 
+			HTMLAREA and plaintext box editing now behavies better with respect to
+			line returns. HTMLArea submissions now have the first line return removed
+			to prevent them from accumulating. Plain textarea line returns are converted
+			to &lt;br /&gt; tags.
+		 (<i>Adam Franco</i>)
 		<li/> Change:  
 			Discussions now display 'cancel' buttons when in post or rate modes.
 		 (<i>Adam Franco</i>)
