@@ -9,6 +9,8 @@ v. 1.3.0 (the future)
 	**** IMPORTANT *** Change: Various changes in Segue necessitate that you upgrade to a new config file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates' to make several changes to Segue's database and file-storage structure. (Adam Franco)
 		
 		
+	* Bug Fix: HTMLAREA and plaintext box editing now behavies better with respect to line returns. HTMLArea submissions now have the first line return removed to prevent them from accumulating. Plain textarea line returns are converted to &lt;br /&gt; tags. (Adam Franco)
+		
 	* Change: Discussions now display 'cancel' buttons when in post or rate modes. (Adam Franco)
 		
 	* New feature: Added 'Preview as user' functionality (found in the Permissions screen) that allows the owner of a site to see what the site would look like for other users (including 'everyone' and 'institute'). This can give site owners a better understanding of the permissions system. (Adam Franco)
